<resources>
    <string name="app_name">RentReadyChecklist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rent_ready">Rent Ready</string>
    <string name="new_checklist">New Checklist</string>
    <string name="saved_checklist">Saved Checklist</string>
    <string name="insurance">Insurance</string>
    <string name="other">Other</string>
    <string name="applogo">appLogo</string>
    <string name="solutions">Solutions</string>
    <string name="new_way_home">New Way Home</string>
    <string name="saved_checklist_name">Saved Checklist Name</string>
    <string name="saved_check_list">Saved Check List</string>
    <string name="back_arrow">back arrow</string>
    <string name="next">Next</string>
    <string name="date">Date:</string>
    <string name="time">Time</string>
    <string name="time_new">Time :</string>
    <string name="property_address">Property Address</string>
    <string name="front_door_lock_set_n_deadbolt_handle_full_set">Front Door Lock Set:\n( Deadbolt Handle, Full Set)</string>
    <string name="lock_set_from_garage_to_house_door_n_3_photos_deadbolt_handle_full_set">Lock Set From Garage To House Door\n(3 Photos: Deadbolt .Handle, Full Set)</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="take_pictures">Take Pictures</string>
    <string name="fence">Fence :</string>
    <string name="fix">FIX</string>
    <string name="na">NA</string>
    <string name="ok">OK</string>
    <string name="product">Product :</string>
    <string name="notes">Notes :</string>
    <string name="max_150_characters">Max 150 Characters</string>
    <string name="story">Story</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="previous">Previous</string>
    <string name="upload_your_files_here">Upload Your Files Here</string>
    <string name="outside">Outside</string>
    <string name="bedroom">Bedroom</string>
    <string name="number_of_bedrooms">Number of Bedrooms:</string>
    <string name="bathroom">Bathroom</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="front_doors">Front Doors</string>
    <string name="garage">Garage</string>
    <string name="laundry_room">Laundry Room</string>
    <string name="living_room">Living Room</string>
    <string name="great_room">Great Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="save">Save</string>
    <string name="dining_room">Dining Room</string>
</resources>