<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="105dp"
        android:background="@drawable/nwhs_image"
        android:contentDescription="@string/applogo">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/rent_ready"
        android:textColor="@color/nwhs"
        android:textSize="28sp"
        android:textStyle="bold">

    </TextView>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/newChecklist"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/new_checklist"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/savedChecklist"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/saved_checklist"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/insurance"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/insurance"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/other"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="7dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>
    </GridLayout>


</LinearLayout>