<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.EmailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/email_image"
            android:contentDescription="@string/app_name">

        </ImageView>

        <TextView
            style="@style/new_checklist_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_address">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/box_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/nwhs"
            android:fontFamily="@font/roboto"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cardCornerRadius="10dp">

            <TextView
                style="@style/app_text_style"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textSize="18sp">

            </TextView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>