<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".fragments.NewChecklistFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/new_checklist_style"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/box_stroke_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tt"
                    style="@style/new_checklist_style"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_new">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeTextInput"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/box_stroke_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/new_checklist_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/property_address">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/propertyAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/take_pictures"
                android:textColor="@color/nwhs"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3">

                <TextView
                    style="@style/new_checklist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    >

                </CheckBox>

                <TextView
                    style="@style/new_checklist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/front_door_lock_set_n_deadbolt_handle_full_set" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    >

                </CheckBox>


                <TextView
                    style="@style/new_checklist_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lock_set_from_garage_to_house_door_n_3_photos_deadbolt_handle_full_set" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    >

                </CheckBox>
            </GridLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/add_image_shape"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_upload_image"
                    android:layout_gravity="center">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_your_files_here"
                    android:textColor="#9B9B9B"
                    android:fontFamily="@font/roboto"
                    android:layout_gravity="center">

                </TextView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/next_button_shape"
        android:backgroundTint="@color/nwhs"
        android:fontFamily="@font/roboto"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>